# perception-pipeline

./: .gitignore  AGENTS.md  README.md
.codex/skills/codebase-design/: DEEPENING.md  DESIGN-IT-TWICE.md  SKILL.md
.codex/skills/domain-modeling/: ADR-FORMAT.md  CONTEXT-FORMAT.md  SKILL.md
.codex/skills/grilling/: SKILL.md
src/camera_capture/: package.xml  setup.py
src/camera_capture/camera_capture/: camera_capture_node.py  parameters.py
src/camera_capture/launch/: camera_capture.launch.py
src/camera_capture/test/: test_camera_capture_node.py  test_parameters.py
src/image_capture/: AGENTS.md  package.xml  setup.py
src/image_capture/image_capture/: image_capture_node.py  parameters.py
src/image_capture/launch/: image_capture.launch.py
src/image_capture/test/: test_image_capture_node.py  test_parameters.py
src/lidar_preprocessor/: AGENTS.md  CMakeLists.txt  package.xml
src/lidar_preprocessor/config/: roi.example.yaml
src/lidar_preprocessor/launch/: lidar_preprocessor.launch.py
src/lidar_preprocessor/msg/: RoiAlarm.msg  RoiAlarmArray.msg
src/lidar_preprocessor/src/: lidar_preprocessor_node.cpp
src/monitoring_fusion/: AGENTS.md
src/object_detector/: AGENTS.md  package.xml  setup.py
src/object_detector/launch/: yolo_detector.launch.py
src/object_detector/object_detector/: __init__.py  parameters.py  yolo_detector.py  yolo_detector_node.py
src/object_detector/test/: test_parameters.py  test_yolo_detector.py  test_yolo_detector_node.py
src/video_capture/: AGENTS.md  package.xml  setup.cfg  setup.py
src/video_capture/launch/: video_capture.launch.py
src/video_capture/test/: test_parameters.py  test_video_capture_node.py
src/video_capture/video_capture/: parameters.py  video_capture_node.py
